--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,9 @@
     <string name="app_name">MultiShotCamera</string>
     <string name="action_settings">Settings</string>
 
-    <string name="common_setting">설정</string>
     <string name="common_close">닫기</string>
+    <string name="common_delete">삭제</string>
+    <string name="common_setting">설정</string>
 
     <string name="number_zero">0</string>
 
@@ -14,6 +15,9 @@
 
     <!-- 카메라 -->
     <string name="take_picture_max">최대</string>
-    <string name="take_picture_max_select">최대 10장까지 촬영 가능합니다</string>
+    <string name="take_picture_max_select">장까지 촬영 가능합니다</string>
+
+    <!-- 프리뷰 -->
+    <string name="camera_preview_none_delete_image">더이상 삭제할 이미지가 없습니다.</string>
 
 </resources>
